crates/wx-compiler/src/snapshots/wx_compiler__tests__factorial.wat.snap
---
source: crates/wx-compiler/src/tests.rs
expression: module.to_wat(&interner)
---
(module(func $factorial (export "factorial")(param $n_0 i32)(result i32)(if (i32.le_s (local.get $n_0)(i32.const 1))(then(block (return (i32.const 1)))))(i32.mul (local.get $n_0)(call $factorial (i32.sub (local.get $n_0)(i32.const 1))))))
