crates/wx-compiler/src/snapshots/wx_compiler__tests__factorial_mir.snap
---
source: crates/wx-compiler/src/tests.rs
expression: mir
---
functions:
  - symbol: 1
    ty:
      param_count: 1
      params_results:
        - I32
        - I32
    block:
      kind:
        Block:
          scope:
            index: 0
            kind: Block
            parent: ~
            children:
              - 1
            result: I32
          expressions:
            - kind:
                IfElse:
                  condition:
                    kind:
                      LessEq:
                        left:
                          kind:
                            Local:
                              local:
                                index: 0
                                symbol: 2
                                ty: I32
                                mutability: Const
                              scope: 0
                          ty: I32
                        right:
                          kind:
                            Int:
                              value: 1
                          ty: I32
                    ty: Bool
                  then_block:
                    kind:
                      Block:
                        scope:
                          index: 1
                          kind: Block
                          parent: 0
                          children: []
                          result: Never
                        expressions:
                          - kind:
                              Return:
                                value:
                                  kind:
                                    Int:
                                      value: 1
                                  ty: I32
                            ty: Never
                    ty: Never
                  else_block: ~
              ty: Unit
            - kind:
                Mul:
                  left:
                    kind:
                      Local:
                        local:
                          index: 0
                          symbol: 2
                          ty: I32
                          mutability: Const
                        scope: 0
                    ty: I32
                  right:
                    kind:
                      Call:
                        callee:
                          kind:
                            Function:
                              index: 0
                          ty:
                            Function: 0
                        arguments:
                          - kind:
                              Sub:
                                left:
                                  kind:
                                    Local:
                                      local:
                                        index: 0
                                        symbol: 2
                                        ty: I32
                                        mutability: Const
                                      scope: 0
                                  ty: I32
                                right:
                                  kind:
                                    Int:
                                      value: 1
                                  ty: I32
                            ty: I32
                    ty: I32
              ty: I32
      ty: I32
globals: []
exports:
  - Function:
      func_index: 0
