crates/wx-compiler/src/snapshots/wx_compiler__tests__factorial_wasm.snap
---
source: crates/wx-compiler/src/tests.rs
expression: module
---
types:
  signatures:
    - param_count: 1
      param_results:
        - I32
        - I32
globals:
  globals: []
tables:
  tables: []
elements:
  segments: []
functions:
  types:
    - 0
exports:
  items:
    - Function:
        name: 1
        func_index: 0
code:
  expressions: []
  functions:
    - name: 1
      locals:
        - name: 2
          ty: I32
      expressions:
        - IfElse:
            condition:
              I32LeS:
                left:
                  LocalGet:
                    local_index: 0
                right:
                  I32Const:
                    value: 1
            result: Empty
            then_branch:
              Block:
                expressions:
                  - Return:
                      value:
                        I32Const:
                          value: 1
                result: Empty
            else_branch: ~
        - I32Mul:
            left:
              LocalGet:
                local_index: 0
            right:
              Call:
                function: 0
                arguments:
                  - I32Sub:
                      left:
                        LocalGet:
                          local_index: 0
                      right:
                        I32Const:
                          value: 1
