crates/wx-compiler/src/snapshots/wx_compiler__tests__func_pointers.snap
---
source: crates/wx-compiler/src/tests.rs
expression: bytecode.clone()
extension: wasm
snapshot_kind: binary
---
