crates/wx-compiler/src/snapshots/wx_compiler__tests__func_pointers_hir.snap
---
source: crates/wx-compiler/src/tests.rs
expression: hir
---
hir:
  file_id: 0
  functions:
    - name:
        symbol: 1
        span:
          start: 5
          end: 8
      ty:
        params:
          - Primitive: I32
          - Primitive: I32
        result:
          Primitive: I32
      stack:
        scopes:
          - kind: Block
            label: ~
            parent: ~
            locals:
              - name:
                  symbol: 2
                  span:
                    start: 9
                    end: 10
                ty:
                  Primitive: I32
                mutability: Const
              - name:
                  symbol: 4
                  span:
                    start: 17
                    end: 18
                ty:
                  Primitive: I32
                mutability: Const
            inferred_type:
              Primitive: I32
            expected_type:
              Primitive: I32
      block:
        kind:
          Block:
            scope_index: 0
            expressions: []
            result:
              kind:
                Binary:
                  operator:
                    kind: Add
                    span:
                      start: 34
                      end: 35
                  left:
                    kind:
                      Local:
                        scope_index: 0
                        local_index: 0
                    span:
                      start: 32
                      end: 33
                    ty:
                      Primitive: I32
                  right:
                    kind:
                      Local:
                        scope_index: 0
                        local_index: 1
                    span:
                      start: 36
                      end: 37
                    ty:
                      Primitive: I32
              span:
                start: 32
                end: 37
              ty:
                Primitive: I32
        span:
          start: 30
          end: 39
        ty:
          Primitive: I32
    - name:
        symbol: 5
        span:
          start: 45
          end: 48
      ty:
        params:
          - Primitive: I32
          - Primitive: I32
        result:
          Primitive: I32
      stack:
        scopes:
          - kind: Block
            label: ~
            parent: ~
            locals:
              - name:
                  symbol: 2
                  span:
                    start: 49
                    end: 50
                ty:
                  Primitive: I32
                mutability: Const
              - name:
                  symbol: 4
                  span:
                    start: 57
                    end: 58
                ty:
                  Primitive: I32
                mutability: Const
            inferred_type:
              Primitive: I32
            expected_type:
              Primitive: I32
      block:
        kind:
          Block:
            scope_index: 0
            expressions: []
            result:
              kind:
                Binary:
                  operator:
                    kind: Sub
                    span:
                      start: 74
                      end: 75
                  left:
                    kind:
                      Local:
                        scope_index: 0
                        local_index: 0
                    span:
                      start: 72
                      end: 73
                    ty:
                      Primitive: I32
                  right:
                    kind:
                      Local:
                        scope_index: 0
                        local_index: 1
                    span:
                      start: 76
                      end: 77
                    ty:
                      Primitive: I32
              span:
                start: 72
                end: 77
              ty:
                Primitive: I32
        span:
          start: 70
          end: 79
        ty:
          Primitive: I32
    - name:
        symbol: 6
        span:
          start: 86
          end: 91
      ty:
        params:
          - Function: 0
          - Primitive: I32
          - Primitive: I32
        result:
          Primitive: I32
      stack:
        scopes:
          - kind: Block
            label: ~
            parent: ~
            locals:
              - name:
                  symbol: 7
                  span:
                    start: 97
                    end: 102
                ty:
                  Function: 0
                mutability: Const
              - name:
                  symbol: 2
                  span:
                    start: 132
                    end: 133
                ty:
                  Primitive: I32
                mutability: Const
              - name:
                  symbol: 4
                  span:
                    start: 145
                    end: 146
                ty:
                  Primitive: I32
                mutability: Const
            inferred_type:
              Primitive: I32
            expected_type:
              Primitive: I32
      block:
        kind:
          Block:
            scope_index: 0
            expressions: []
            result:
              kind:
                Call:
                  callee:
                    kind:
                      Local:
                        scope_index: 0
                        local_index: 0
                    span:
                      start: 166
                      end: 171
                    ty:
                      Function: 0
                  arguments:
                    - kind:
                        Local:
                          scope_index: 0
                          local_index: 1
                      span:
                        start: 172
                        end: 173
                      ty:
                        Primitive: I32
                    - kind:
                        Local:
                          scope_index: 0
                          local_index: 2
                      span:
                        start: 175
                        end: 176
                      ty:
                        Primitive: I32
              span:
                start: 166
                end: 177
              ty:
                Primitive: I32
        span:
          start: 160
          end: 179
        ty:
          Primitive: I32
    - name:
        symbol: 8
        span:
          start: 193
          end: 197
      ty:
        params: []
        result:
          Primitive: I32
      stack:
        scopes:
          - kind: Block
            label: ~
            parent: ~
            locals:
              - name:
                  symbol: 2
                  span:
                    start: 217
                    end: 218
                ty:
                  Primitive: I32
                mutability: Const
              - name:
                  symbol: 4
                  span:
                    start: 250
                    end: 251
                ty:
                  Primitive: I32
                mutability: Const
            inferred_type:
              Primitive: I32
            expected_type:
              Primitive: I32
      block:
        kind:
          Block:
            scope_index: 0
            expressions:
              - kind:
                  LocalDeclaration:
                    name:
                      symbol: 2
                      span:
                        start: 217
                        end: 218
                    scope_index: 0
                    local_index: 0
                    expr:
                      kind:
                        Call:
                          callee:
                            kind:
                              Function: 2
                            span:
                              start: 221
                              end: 226
                            ty:
                              Function: 1
                          arguments:
                            - kind:
                                Function: 0
                              span:
                                start: 227
                                end: 230
                              ty:
                                Function: 0
                            - kind:
                                Int: 5
                              span:
                                start: 232
                                end: 233
                              ty:
                                Primitive: I32
                            - kind:
                                Int: 10
                              span:
                                start: 235
                                end: 237
                              ty:
                                Primitive: I32
                      span:
                        start: 221
                        end: 238
                      ty:
                        Primitive: I32
                span:
                  start: 211
                  end: 238
                ty: Unit
              - kind:
                  LocalDeclaration:
                    name:
                      symbol: 4
                      span:
                        start: 250
                        end: 251
                    scope_index: 0
                    local_index: 1
                    expr:
                      kind:
                        Call:
                          callee:
                            kind:
                              Function: 2
                            span:
                              start: 254
                              end: 259
                            ty:
                              Function: 1
                          arguments:
                            - kind:
                                Function: 1
                              span:
                                start: 260
                                end: 263
                              ty:
                                Function: 0
                            - kind:
                                Int: 10
                              span:
                                start: 265
                                end: 267
                              ty:
                                Primitive: I32
                            - kind:
                                Int: 5
                              span:
                                start: 269
                                end: 270
                              ty:
                                Primitive: I32
                      span:
                        start: 254
                        end: 271
                      ty:
                        Primitive: I32
                span:
                  start: 244
                  end: 271
                ty: Unit
            result:
              kind:
                Binary:
                  operator:
                    kind: Add
                    span:
                      start: 280
                      end: 281
                  left:
                    kind:
                      Local:
                        scope_index: 0
                        local_index: 0
                    span:
                      start: 278
                      end: 279
                    ty:
                      Primitive: I32
                  right:
                    kind:
                      Local:
                        scope_index: 0
                        local_index: 1
                    span:
                      start: 282
                      end: 283
                    ty:
                      Primitive: I32
              span:
                start: 278
                end: 283
              ty:
                Primitive: I32
        span:
          start: 205
          end: 285
        ty:
          Primitive: I32
  enums: []
  globals: []
  exports:
    - Function:
        func_index: 3
diagnostics: []
