crates/wx-compiler/src/snapshots/wx_compiler__tests__func_pointers_mir.snap
---
source: crates/wx-compiler/src/tests.rs
expression: mir
---
functions:
  - name: 1
    ty:
      param_count: 2
      params_results:
        - I32
        - I32
        - I32
    frame:
      - kind: Block
        parent: ~
        locals:
          - name: 2
            ty: I32
            mutability: Const
          - name: 4
            ty: I32
            mutability: Const
        result: I32
    block:
      kind:
        Block:
          scope_index: 0
          expressions:
            - kind:
                Add:
                  left:
                    kind:
                      Local:
                        scope_index: 0
                        local_index: 0
                    ty: I32
                  right:
                    kind:
                      Local:
                        scope_index: 0
                        local_index: 1
                    ty: I32
              ty: I32
      ty: I32
  - name: 5
    ty:
      param_count: 2
      params_results:
        - I32
        - I32
        - I32
    frame:
      - kind: Block
        parent: ~
        locals:
          - name: 2
            ty: I32
            mutability: Const
          - name: 4
            ty: I32
            mutability: Const
        result: I32
    block:
      kind:
        Block:
          scope_index: 0
          expressions:
            - kind:
                Sub:
                  left:
                    kind:
                      Local:
                        scope_index: 0
                        local_index: 0
                    ty: I32
                  right:
                    kind:
                      Local:
                        scope_index: 0
                        local_index: 1
                    ty: I32
              ty: I32
      ty: I32
  - name: 6
    ty:
      param_count: 3
      params_results:
        - Function: 0
        - I32
        - I32
        - I32
    frame:
      - kind: Block
        parent: ~
        locals:
          - name: 7
            ty:
              Function: 0
            mutability: Const
          - name: 2
            ty: I32
            mutability: Const
          - name: 4
            ty: I32
            mutability: Const
        result: I32
    block:
      kind:
        Block:
          scope_index: 0
          expressions:
            - kind:
                Call:
                  callee:
                    kind:
                      Local:
                        scope_index: 0
                        local_index: 0
                    ty:
                      Function: 0
                  arguments:
                    - kind:
                        Local:
                          scope_index: 0
                          local_index: 1
                      ty: I32
                    - kind:
                        Local:
                          scope_index: 0
                          local_index: 2
                      ty: I32
              ty: I32
      ty: I32
  - name: 8
    ty:
      param_count: 0
      params_results:
        - I32
    frame:
      - kind: Block
        parent: ~
        locals:
          - name: 2
            ty: I32
            mutability: Const
          - name: 4
            ty: I32
            mutability: Const
        result: I32
    block:
      kind:
        Block:
          scope_index: 0
          expressions:
            - kind:
                LocalSet:
                  scope_index: 0
                  local_index: 0
                  value:
                    kind:
                      Call:
                        callee:
                          kind:
                            Function:
                              index: 2
                          ty:
                            Function: 1
                        arguments:
                          - kind:
                              Function:
                                index: 0
                            ty:
                              Function: 0
                          - kind:
                              Int:
                                value: 5
                            ty: I32
                          - kind:
                              Int:
                                value: 10
                            ty: I32
                    ty: I32
              ty: Unit
            - kind:
                LocalSet:
                  scope_index: 0
                  local_index: 1
                  value:
                    kind:
                      Call:
                        callee:
                          kind:
                            Function:
                              index: 2
                          ty:
                            Function: 1
                        arguments:
                          - kind:
                              Function:
                                index: 1
                            ty:
                              Function: 0
                          - kind:
                              Int:
                                value: 10
                            ty: I32
                          - kind:
                              Int:
                                value: 5
                            ty: I32
                    ty: I32
              ty: Unit
            - kind:
                Add:
                  left:
                    kind:
                      Local:
                        scope_index: 0
                        local_index: 0
                    ty: I32
                  right:
                    kind:
                      Local:
                        scope_index: 0
                        local_index: 1
                    ty: I32
              ty: I32
      ty: I32
globals: []
exports:
  - Function:
      func_index: 3
